2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Trivially refactor.
	(add_hyphenation_exceptions): Rename this...
	(add_hyphenation_exception_words_request): ...to this.
	(init_hyphenation_pattern_requests): Update wiry-uppery.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_translate): Fix copy-and-paste
	braino in assertion message.

2025-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (remove_font_specific_character):
	Recover from invalid input more robustly.  If we encounter an
	invalid character token in the `rfschar` argument list (one that
	has a null pointer to its `charinfo`), and the build used
	`NDEBUG` to suppress assertions, skip the character and process
	the next token (if any) instead of ignoring the rest of the
	input line.  Also proceed to the next token if the font-specific
	character to be removed already doesn't exist as such.
	`rfschar` now better aligns with what `cflags` and `rchar` do.

2025-11-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (define_character, get_line_arg)
	(do_translate):
	* src/roff/troff/node.cpp (remove_font_specific_character): Add
	assertions.
	* src/roff/troff/input.cpp (do_overstrike, do_bracket)
	(token::description)
	(encode_special_character_for_device_output)
	(set_character_flags_request): Invert sense of test and add
	assertion.
	(token::next): Add assertions to `\z` escape sequence handler.
	(token:description): Split conditional to accommodate assertion.
	(encode_special_character_for_device_output): Lift assignment
	out of conditional branch since a null pointer check now guards
	it from execution with an early `return`.  Add assertion for
	impossible situation of a special character already being
	defined with a null groff `symbol` as its identifier.  For
	`NDEBUG` builds, return early should that eventuate, as we can't