@@ -885,7 +885,7 @@ environment::environment(const environment *e)
   underline_spaces(false),
   input_trap_count(-1),
   continued_input_trap(false),
-  line(0) /* nullptr */,
+  line(0 /* nullptr */),
   prev_text_length(e->prev_text_length),
   width_total(0),
   space_total(0),
@@ -3135,15 +3135,15 @@ void environment::wrap_up_tab()
 
 node *environment::make_tab_node(hunits d, node *next)
 {
-  if (leader_node != 0 && d < 0) {
+  if ((leader_node != 0 /* nullptr */) && (d < 0)) {
     error("motion generated by leader cannot be negative");
     delete leader_node;
-    leader_node = 0;
+    leader_node = 0 /* nullptr */;
   }
-  if (!leader_node)
+  if (0 /* nullptr */ == leader_node)
     return new hmotion_node(d, 1, 0, get_fill_color(), next);
   node *nd = new hline_node(d, leader_node, next);
-  leader_node = 0;
+  leader_node = 0 /* nullptr */;
   return nd;
 }
 
@@ -3155,7 +3155,9 @@ void environment::advance_to_tab_stop(bool use_leader)
     wrap_up_tab();
   charinfo *ci = use_leader ? leader_char : tab_char;
   delete leader_node;
-  leader_node = ci ? make_char_node(ci) : 0;
+  leader_node = 0 /* nullptr */;
+  if (ci != 0 /* nullptr */)
+    leader_node = make_char_node(ci);
   tab_type t = distance_to_next_tab(&d, &absolute);
   switch (t) {
   case TAB_NONE:
